Improve directory structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,15 +2,17 @@ cmake_minimum_required (VERSION 3.10)
 project (World-Cup-Querying)
 
 # Add Google Test
-set(google_test_dir ./googletest-master)
+set(google_test_dir third_party/googletest)
 add_subdirectory(${google_test_dir})
 include_directories(${google_test_dir}/googletest/include)
 include_directories(${google_test_dir}/googlemock/include)
 
 # Add RapidJSON
-set(rapidjson_dir ./rapidjson)
+set(rapidjson_dir ./third_party/rapidjson)
 include_directories(${rapidjson_dir})
 
+# Test files
+add_subdirectory(test)
+
 # Main files
-add_executable(main main.cpp)
-target_link_libraries(main gtest gtest_main)
+add_subdirectory(src)
