Improve CMakeLists.txt

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,6 +9,7 @@ include_directories(${src_root}/)
 add_executable(project_test
         test.cpp
         tool_test.cpp
-        ${src_root}/my_time.h
-        ${src_root}/my_time.cpp)
+        )
+
 target_link_libraries(project_test gtest gtest_main)
+target_link_libraries(project_test src_files)
