--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,8 @@ add_library(src_files
         heap.hpp
         my_time.h
         my_time.cpp
-        )
+        timeline.h
+        timeline.cpp)
 
 add_executable(project_main
         main.cpp
