Refactor unittest files.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,8 +8,10 @@ include_directories(${src_root}/)
 
 add_executable(project_test
         test.cpp
-        tool_test.cpp
-        )
+        time_test.cpp
+        structure_test.cpp
+        algorithm_test.cpp
+        json_test.cpp)
 
 target_link_libraries(project_test gtest gtest_main)
 target_link_libraries(project_test src_files)
