Add MyVector<T> template, but still has problems when doing reading files.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,7 +15,8 @@ add_library(src_files
         rank.hpp
         demo.cpp
         demo.h
-        hash.hpp)
+        hash.hpp
+        my_vector.hpp)
 
 add_executable(project_main
         main.cpp
