Add demo test cases.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,7 +12,7 @@ add_executable(project_test
         structure_test.cpp
         algorithm_test.cpp
         json_test.cpp
-        )
+        demo_test.cpp)
 
 target_link_libraries(project_test gtest gtest_main)
 target_link_libraries(project_test src_files)
